account verification working

--- a/ChampionMains.Pyrobot.Data/App.config
+++ b/ChampionMains.Pyrobot.Data/App.config
@@ -4,6 +4,11 @@
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
+  <connectionStrings>
+    <clear />
+    <add name="UnitOfWork" connectionString="Data Source=.;Initial Catalog=championmains-pyrobot-unitofwork;Integrated Security=True;MultipleActiveResultSets=True;" providerName="System.Data.SqlClient" />
+    <add name="DefaultConnection" connectionString="Data Source=.;Initial Catalog=championmains-pyrobot-db;Integrated Security=True;MultipleActiveResultSets=True;" providerName="System.Data.SqlClient" />
+  </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
     <providers>
