--- a/ChampionMains.Pyrobot.Infrastructure/ChampionMains.Pyrobot.Infrastructure.csproj
+++ b/ChampionMains.Pyrobot.Infrastructure/ChampionMains.Pyrobot.Infrastructure.csproj
@@ -64,6 +64,7 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Spatial, Version=5.7.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\System.Spatial.5.7.0\lib\net40\System.Spatial.dll</HintPath>
@@ -105,6 +106,7 @@
     <Compile Include="Services\RiotService.cs" />
     <Compile Include="Services\Riot\RiotHttpException.cs" />
     <Compile Include="Services\Riot\RiotWebRequester.cs" />
+    <Compile Include="Services\RoleService.cs" />
     <Compile Include="Services\SummonerService.cs" />
     <Compile Include="Services\UserService.cs" />
     <Compile Include="Services\SubRedditService.cs" />
