--- a/ChampionMains.Pyrobot.Data/ChampionMains.Pyrobot.Data.csproj
+++ b/ChampionMains.Pyrobot.Data/ChampionMains.Pyrobot.Data.csproj
@@ -93,6 +93,7 @@
     <Compile Include="Enums\Tiers.cs" />
     <Compile Include="UnitOfWork.cs" />
     <Compile Include="Models\User.cs" />
+    <Compile Include="WebJobModels\SummonerUpdate.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
@@ -103,6 +104,7 @@
       <DependentUpon>201606240635260_reset.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
