removing one-user interfaces

--- a/ChampionMains.Pyrobot.Data/ChampionMains.Pyrobot.Data.csproj
+++ b/ChampionMains.Pyrobot.Data/ChampionMains.Pyrobot.Data.csproj
@@ -78,10 +78,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Consts.cs" />
-    <Compile Include="IUnitOfWork.cs" />
-    <Compile Include="Migrations\201606240635260_reset.cs" />
-    <Compile Include="Migrations\201606240635260_reset.Designer.cs">
-      <DependentUpon>201606240635260_reset.cs</DependentUpon>
+    <Compile Include="Migrations\201606250720507_initial.cs" />
+    <Compile Include="Migrations\201606250720507_initial.Designer.cs">
+      <DependentUpon>201606250720507_initial.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\Champion.cs" />
@@ -100,11 +99,10 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Migrations\201606240635260_reset.resx">
-      <DependentUpon>201606240635260_reset.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\201606250720507_initial.resx">
+      <DependentUpon>201606250720507_initial.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
-  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
