--- a/ChampionMains.Pyrobot.Infrastructure/ChampionMains.Pyrobot.Infrastructure.csproj
+++ b/ChampionMains.Pyrobot.Infrastructure/ChampionMains.Pyrobot.Infrastructure.csproj
@@ -102,6 +102,7 @@
     <Compile Include="Services\UserService.cs" />
     <Compile Include="Services\SubRedditService.cs" />
     <Compile Include="Services\ValidationService.cs" />
+    <Compile Include="Services\WebJobService.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\ChampionMains.Pyrobot.Data\ChampionMains.Pyrobot.Data.csproj">
