--- a/ChampionMains.Pyrobot.Data/ChampionMains.Pyrobot.Data.csproj
+++ b/ChampionMains.Pyrobot.Data/ChampionMains.Pyrobot.Data.csproj
@@ -79,14 +79,10 @@
   <ItemGroup>
     <Compile Include="Consts.cs" />
     <Compile Include="Enums\WebJobQueue.cs" />
-    <Compile Include="Migrations\201606250720507_initial.cs" />
-    <Compile Include="Migrations\201606250720507_initial.Designer.cs">
-      <DependentUpon>201606250720507_initial.cs</DependentUpon>
-    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\Champion.cs" />
     <Compile Include="Models\SummonerChampionMastery.cs" />
-    <Compile Include="Models\SummonerInfo.cs" />
+    <Compile Include="Models\SummonerRank.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Models\SubReddit.cs" />
     <Compile Include="Models\Summoner.cs" />
@@ -97,11 +93,6 @@
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="Migrations\201606250720507_initial.resx">
-      <DependentUpon>201606250720507_initial.cs</DependentUpon>
-    </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
     <Folder Include="WebJobModels\" />
