--- a/ChampionMains.Pyrobot.Data/ChampionMains.Pyrobot.Data.csproj
+++ b/ChampionMains.Pyrobot.Data/ChampionMains.Pyrobot.Data.csproj
@@ -78,7 +78,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Consts.cs" />
+    <Compile Include="Enums\Region.cs" />
     <Compile Include="Enums\WebJobQueue.cs" />
+    <Compile Include="Migrations\201606260449096_subreddit-settings.cs" />
+    <Compile Include="Migrations\201606260449096_subreddit-settings.Designer.cs">
+      <DependentUpon>201606260449096_subreddit-settings.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\Champion.cs" />
     <Compile Include="Models\SummonerChampionMastery.cs" />
@@ -86,7 +91,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Models\SubReddit.cs" />
     <Compile Include="Models\Summoner.cs" />
-    <Compile Include="Enums\Tiers.cs" />
+    <Compile Include="Enums\Tier.cs" />
     <Compile Include="UnitOfWork.cs" />
     <Compile Include="Models\User.cs" />
   </ItemGroup>
@@ -96,6 +101,11 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="WebJobModels\" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201606260449096_subreddit-settings.resx">
+      <DependentUpon>201606260449096_subreddit-settings.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
