make webjob wakeup

--- a/ChampionMains.Pyrobot.WebJob/App.config
+++ b/ChampionMains.Pyrobot.WebJob/App.config
@@ -22,7 +22,8 @@
     <add key="riot.maxAttempts" value="3" />
     <add key="riot.retryInterval" value="0:00:01.5" />
     <add key="riot.maxRequestsPer10Seconds" value="10" />
-
+    
+    <add key="userAgent" value="aspnet:championMains.pyrobot" />
     <add key="website.leagueUpdateStaleTime" value="00:01:00.000" />
     <add key="security.admins" value="LugnutsK" />
 
