--- a/ChampionMains.Pyrobot.Infrastructure/ChampionMains.Pyrobot.Infrastructure.csproj
+++ b/ChampionMains.Pyrobot.Infrastructure/ChampionMains.Pyrobot.Infrastructure.csproj
@@ -129,7 +129,7 @@
     <Compile Include="Services\RoleService.cs" />
     <Compile Include="Services\SummonerService.cs" />
     <Compile Include="Services\UserService.cs" />
-    <Compile Include="Services\SubRedditService.cs" />
+    <Compile Include="Services\SubredditService.cs" />
     <Compile Include="Services\ValidationService.cs" />
     <Compile Include="Services\WebJobService.cs" />
   </ItemGroup>
