--- a/ChampionMains.Pyrobot/ChampionMains.Pyrobot.csproj
+++ b/ChampionMains.Pyrobot/ChampionMains.Pyrobot.csproj
@@ -369,7 +369,7 @@
     <Copy SourceFiles="Web.template.config"
           DestinationFiles="Web.config"/>
   </Target>
-  <Target Name="UpdateWebConfigBeforeRun" AfterTargets="PrepareForRun">
+  <Target Name="UpdateWebConfigBeforeRun" AfterTargets="CopyWebTemplateConfig" Condition="Exists('Web.Local.Config')">
     <Message Text="Configuration: $(Configuration): Web.Local.config" Importance="high" />
     <TransformXml Source="Web.template.config"
               Transform="Web.Local.config"
