riot web requester use new X-Rate-Limit-Count header (+ nightly update WIP)

--- a/ChampionMains.Pyrobot/Web.template.config
+++ b/ChampionMains.Pyrobot/Web.template.config
@@ -31,8 +31,8 @@
 
     <add key="riot.apiKey" value="" />
     <add key="riot.maxAttempts" value="3" />
-    <add key="riot.retryInterval" value="0:00:01.5" />
-    <add key="riot.maxRequestsPer10Seconds" value="10" />
+    <add key="riot.retryInterval" value="0:00:05" />
+    <add key="riot.rateLimit" value="10:10,500:600" />
 
     <!--<add key="webjob.wakeup.username" value="$championmains-pyrobot" />
     <add key="webjob.wakeup.password" value="" />
