--- a/ChampionMains.Pyrobot/Web.template.config
+++ b/ChampionMains.Pyrobot/Web.template.config
@@ -29,10 +29,10 @@
     <add key="reddit.modUserName" value="ChampionMainsBot" />
     <add key="reddit.modPassword" value="" />
 
-    <add key="riot.apiKey" value="" />
-    <add key="riot.maxAttempts" value="3" />
-    <add key="riot.retryInterval" value="0:00:05" />
-    <add key="riot.rateLimit" value="10:10,500:600" />
+    <add key="riotService.apiKey" value="" />
+    <add key="riotService.maxAttempts" value="3" />
+    <add key="riotService.retryInterval" value="0:00:05" />
+    <add key="riotService.rateLimit" value="10:10,500:600" />
 
     <!--<add key="webjob.wakeup.username" value="$championmains-pyrobot" />
     <add key="webjob.wakeup.password" value="" />
