--- a/ChampionMains.Pyrobot/Web.template.config
+++ b/ChampionMains.Pyrobot/Web.template.config
@@ -39,7 +39,8 @@
     <add key="webjob.wakeup.url" value="https://championmains-pyrobot.scm.azurewebsites.net/api/jobs/continuous/pyrobot-webjob/start" />-->
 
     <add key="userAgent" value="aspnet:championMains.pyrobot" />
-    <add key="website.leagueUpdateStaleTime" value="00:01:00.000" />
+    <add key="website.leagueUpdateStaleTime" value="00:06:00.000" />
+    <add key="website.flairStaleTime" value="00:06:00.000" />
     <add key="security.admins" value="LugnutsK" />
     <add key="AzureWebJobsStorage" value="" />
   </appSettings>
