--- a/ChampionMains.Pyrobot/ChampionMains.Pyrobot.csproj
+++ b/ChampionMains.Pyrobot/ChampionMains.Pyrobot.csproj
@@ -242,7 +242,7 @@
     <Compile Include="Attributes\WebApiAuthorizeAttribute.cs" />
     <Compile Include="CacheUtil.cs" />
     <Compile Include="Controllers\LoginController.cs" />
-    <Compile Include="Controllers\PeriodicUpdateApiController.cs" />
+    <Compile Include="Controllers\BulkUpdateApiController.cs" />
     <Compile Include="Controllers\SubredditApiController.cs" />
     <Compile Include="Controllers\ProfileApiController.cs" />
     <Compile Include="Controllers\ProfileController.cs" />
