--- a/ChampionMains.Pyrobot/Web.template.config
+++ b/ChampionMains.Pyrobot/Web.template.config
@@ -29,18 +29,20 @@
     <add key="reddit.modUserName" value="ChampionMainsBot" />
     <add key="reddit.modPassword" value="" />
 
-    <add key="riotService.apiKey" value="" />
-    <add key="riotService.maxAttempts" value="3" />
-    <add key="riotService.retryInterval" value="0:00:05" />
-    <add key="riotService.rateLimit" value="10:10,500:600" />
+    <add key="riot.apiKey" value="" />
+    <add key="riot.maxAttempts" value="3" />
+    <add key="riot.retryInterval" value="0:00:05" />
+    <add key="riot.rateLimit" value="10:10,500:600" />
 
     <!--<add key="webjob.wakeup.username" value="$championmains-pyrobot" />
     <add key="webjob.wakeup.password" value="" />
     <add key="webjob.wakeup.url" value="https://championmains-pyrobot.scm.azurewebsites.net/api/jobs/continuous/pyrobot-webjob/start" />-->
 
     <add key="userAgent" value="aspnet:championMains.pyrobot" />
-    <add key="website.leagueUpdateStaleTime" value="00:06:00.000" />
-    <add key="website.flairStaleTime" value="00:06:00.000" />
+    <add key="website.riotUpdateMin" value="00:00:02.000" />
+    <add key="website.riotUpdateMax" value="06:00:00.000" />
+    <add key="website.flairUpdateMin" value="00:00:02.000" />
+    <add key="website.flairUpdateMax" value="06:00:00.000" />
     <add key="security.admins" value="LugnutsK" />
     <add key="AzureWebJobsStorage" value="" />
   </appSettings>
